Login header and footer ready

--- a/login.html
+++ b/login.html
@@ -2,9 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login </title>
+    <title>Login</title>
+    <link rel="stylesheet" href="css/bootstrap.css" >
+    <link rel="stylesheet" href="css/mycss.css" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<nav class="navbar navbar-dark bg-primary">
+    <a class="navbar-brand col-sm-12 col-lg-1 col-md-1" href="index.html">Home</a>
+    <a class="navbar-brand col-sm-12 col-lg-1 col-md-1" href="about.html">About Us</a>
+    <a class="navbar-brand col-sm-12 col-lg col-md" href="contact.html">Contact Us</a>
+
+    <nav class="navbar navbar-light bg-white">
+        <form class="form-inline">
+            <button class="btn btn-outline-success gape" type="button"><a href="login.html">Login</a></button>
+            <button class="btn btn-sm btn-outline-secondary gape" type="button"><a href="register.html">Register</a></button>
+            <button class="btn btn-sm btn-outline-secondary gape" type="button"><a href="forget-password.html">Forget-Password</a>  </button>
+        </form>
+    </nav>
+</nav>
+
+
+
+
+
+<div class="jumbotron">
+    <h1>Login To Your Account.</h1>
+</div>
+
+
+
 
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Footer -->
+<footer class="page-footer font-small bg-primary">
+    <div class="footer-copyright text-center py-3" >© 2018 Copyright:
+        <a style="color:#abdde5 ;" href="index.html"> Forexine</a>
+    </div>
+</footer>
+<!-- Footer -->
+
 </html>
