--- a/login.html
+++ b/login.html
@@ -16,12 +16,13 @@
     <nav class="navbar navbar-light bg-white">
         <form class="form-inline">
             <button class="btn btn-outline-success gape" type="button"><a href="login.html">Login</a></button>
-            <button class="btn btn-sm btn-outline-secondary gape" type="button"><a href="register.html">Register</a></button>
-            <button class="btn btn-sm btn-outline-secondary gape" type="button"><a href="forget-password.html">Forget-Password</a>  </button>
+            <button class="btn btn-sm btn-outline-secondary gape" type="button"><a href="register.html">Register</a>
+            </button>
+            <button class="btn btn-sm btn-outline-secondary gape" type="button"><a href="forget-password.html">
+                Forget-Password</a>  </button>
         </form>
     </nav>
 </nav>
-
 
 
 
@@ -30,8 +31,21 @@
     <h1>Login To Your Account.</h1>
 </div>
 
+<div class="container-fluid">
 
+    <form name="login-form">
 
+        <input class="col-sm-12 col-lg-6 offset-lg-3 text-center form-control" type="email" name="email"
+               placeholder="Enter Your Email" > <br>
+        <input class="col-sm-12  col-lg-6 offset-lg-3 form-control text-center" type="password"
+               name="password" value="password"><br>
+
+        <input class="col-sm-12  col-lg-6 offset-lg-3 form-control text-center bg-secondary" type="button"
+              name="submit" value="Login">
+    </form>
+</div>
+
+<br>
 
 </body>
 
