Register forum register details added

--- a/register.html
+++ b/register.html
@@ -22,15 +22,31 @@
     </nav>
 </nav>
 
-
-
-
-
 <div class="jumbotron">
     <h1>Register Now.</h1>
 </div>
 
 
+
+<div class="container-fluid">
+
+    <form name="login-form">
+
+        <input class="col-sm-12 col-lg-6 offset-lg-3 text-center form-control" type="text" name="name"
+               placeholder="Enter Your Name" > <br>
+        <input class="col-sm-12 col-lg-6 offset-lg-3 text-center form-control" type="email" name="email"
+               placeholder="Enter Your Email" > <br>
+        <input class="col-sm-12  col-lg-6 offset-lg-3 form-control text-center" type="password"
+               name="password" value="password"><br>
+        <input class="col-sm-12  col-lg-6 offset-lg-3 form-control text-center" type="password"
+               name="password" value="password2"><br>
+
+        <input class="col-sm-12  col-lg-6 offset-lg-3 form-control text-center bg-secondary" type="button"
+               name="submit" value="Register">
+    </form>
+</div>
+
+<br>
 
 
 </body>
