Contact forum contact details added

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,26 @@
 </div>
 
 
+<div class="container-fluid">
+
+    <form name="login-form">
+        <label for="message">Name:</label>
+        <input class="col-sm-12 col-lg-6  text-center form-control" type="text" name="name"
+               placeholder="Enter Your Name" > <br>
+        <label for="message">Email:</label>
+        <input class="col-sm-12 col-lg-6  text-center form-control" type="email" name="email"
+               placeholder="Enter Your Email" > <br>
+
+
+        <label for="message">Message:</label>
+        <textarea class="form-control col-sm-12 col-lg-6" rows="7" id="message" placeholder="Enter Your Message"></textarea><br>
+
+        <input class="col-sm-12  col-lg-6  form-control text-center bg-secondary" type="button"
+               name="submit" value="Send Email">
+    </form>
+</div>
+
+<br>
 
 
 </body>
