--- a/login.html
+++ b/login.html
@@ -34,11 +34,11 @@
 <div class="container-fluid">
 
     <form name="login-form">
-
         <input class="col-sm-12 col-lg-6 offset-lg-3 text-center form-control" type="email" name="email"
-               placeholder="Enter Your Email" > <br>
+               placeholder="Enter Your Email" id="Email"> <br>
+
         <input class="col-sm-12  col-lg-6 offset-lg-3 form-control text-center" type="password"
-               name="password" value="password"><br>
+               name="password" value="password" id="Password"><br>
 
         <input class="col-sm-12  col-lg-6 offset-lg-3 form-control text-center bg-secondary" type="button"
               name="submit" value="Login">
