--- a/forget-password.html
+++ b/forget-password.html
@@ -23,13 +23,22 @@
 </nav>
 
 
-
-
-
 <div class="jumbotron">
     <h1>Reset Your Password.</h1>
 </div>
 
+
+
+<div class="container-fluid">
+
+    <form name="login-form">
+        <input class="col-sm-12 col-lg-6 offset-lg-3 text-center form-control" type="email" name="email"
+               placeholder="Enter Your Email" id="Email"> <br>
+
+        <input class="col-sm-12  col-lg-6 offset-lg-3 form-control text-center bg-secondary" type="button"
+               name="submit" value="Reset"> <br>
+    </form>
+</div>
 
 
 
