about text added contact form upgraded , google map added

--- a/about.html
+++ b/about.html
@@ -31,6 +31,32 @@
     <p>Who are we and why you should join us.</p>
 </div>
 
+<div class="container-fluid col-8">
+    <h2>Who are We?</h2>
+    <p>
+        We are a group of people who are Working on a project to make ForexTrading better for those who love to invest
+        their money online. Our company consist of a lot team working on different areas which makes it easy to control whole
+        business. we have HR department , Security department , Developers and Programmers.
+    </p>
+
+    <h2>Why we are doing this?</h2>
+    <p>
+        We are a group of people who are Working on a project to make ForexTrading better for those who love to invest
+        their money online. Our company consist of a lot team working on different areas which makes it easy to control whole
+        business. we have HR department , Security department , Developers and Programmers.
+    </p>
+
+    <h2>What makes us different?</h2>
+    <p>
+        We are a group of people who are Working on a project to make ForexTrading better for those who love to invest
+        their money online. Our company consist of a lot team working on different areas which makes it easy to control whole
+        business. we have HR department , Security department , Developers and Programmers.
+    </p>
+
+    <br>
+
+</div>
+
 
 
 
