--- a/contact.html
+++ b/contact.html
@@ -28,19 +28,25 @@
 
 <div class="jumbotron">
     <h1>Contact Us</h1>
-    <p>Contact us by any method given below.</p>
+    <p>Email: <b>AlizaibHassan@gmail.com</b></p>
+    <p>Phone: <b>090078601</b></p>
 </div>
 
 
 <div class="container-fluid">
 
     <form name="login-form">
-        <label for="message">Name:</label>
+        <label for="name">Name:</label>
         <input class="col-sm-12 col-lg-6  text-center form-control" type="text" name="name"
-               placeholder="Enter Your Name" > <br>
-        <label for="message">Email:</label>
+               placeholder="Enter Your Name" id="name"> <br>
+
+        <label for="phone">Phone:</label>
+        <input class="col-sm-12 col-lg-6  text-center form-control" type="text" name="phone"
+               placeholder="Enter Your Phone" id="phone"> <br>
+
+        <label for="email">Email:</label>
         <input class="col-sm-12 col-lg-6  text-center form-control" type="email" name="email"
-               placeholder="Enter Your Email" > <br>
+               placeholder="Enter Your Email" id="email"> <br>
 
 
         <label for="message">Message:</label>
@@ -58,15 +64,13 @@
 
 
 
+<iframe class="col-8 offset-2 offset-sm-12" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d27224.578505881833!2d74.27006718839111!3d31.46719689167271!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdb8c83f6699d5226!2sEmporium+Mall+by+Nishat+Group!5e0!3m2!1sen!2s!4v1542278771992" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
 
+</br>
 
-
-
-
-
-
+</br>
 
 <!-- Footer -->
 <footer class="page-footer font-small bg-primary">
