--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="jumbotron">
             <h1>Forex Trading Made Easy</h1>
-            <p>Once Place Where you can get info about almost all Forex Trade Investments.</p>
+            <p>One Place Where you can get info about almost all Forex Trade Investments.</p>
         </div>
 
 
